--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
     "@types/node": "20.6.2",
-    "@types/react": "18.2.21",
+    "@types/react": "^18.2.28",
     "@types/react-dom": "18.2.7",
     "blurhash": "^2.0.5",
     "date-fns": "^2.30.0",
