--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "tslint": "^6.1.3"
   }
 }
